# mediforme-chatbot-rag

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/mediforme_chatbot_rag/: __init__.py  main.py
src/mediforme_chatbot_rag/api/: health.py  retrieve.py
src/mediforme_chatbot_rag/core/: config.py
src/mediforme_chatbot_rag/ingestion/: __init__.py  fda_fetcher.py
tests/: test_health.py  test_retrieve.py
tests/ingestion/: test_fda_fetcher.py
